--- a/style.css
+++ b/style.css
@@ -8,10 +8,11 @@ body {
 
 #bg-video {
     position: fixed;
-    right: 0;
-    bottom: 0;
-    min-width: 100%;
-    min-height: 100%;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
     z-index: -1; /* Place the video behind other content */
 }
 
@@ -63,6 +64,7 @@ nav a {
 .image-item {
     text-align: center;
     position: relative;
+    margin-bottom: 20px; /* Add margin between image items */
 }
 
 .image-item img {
