--- a/style.css
+++ b/style.css
@@ -127,4 +127,16 @@ nav a {
 .image-container:hover a {
     opacity: 1; /* Show the caption on hover */
 }
+}
+
+        textarea[name=TextArea1] {
+            display: block;
+            margin: 20px auto;
+            width: 80%;
+            min-height: 200px;
+            padding: 10px;
+            font-size: 16px;
+            border-radius: 5px;
+        }
+
 
