--- a/style.css
+++ b/style.css
@@ -138,5 +138,32 @@ nav a {
             font-size: 16px;
             border-radius: 5px;
         }
+footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: #333;
+    padding: 20px;
+    color: #fff;
+    text-align: center;
+}
+
+.social-media-icons {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.social-media-icons li {
+    display: inline-block;
+    margin-right: 10px;
+}
+
+.social-media-icons li img {
+    width: 30px; /* Adjust the size of social media icons as needed */
+    height: auto;
+}
+
 
 
