--- a/style.css
+++ b/style.css
@@ -88,6 +88,8 @@ button {
     font-size: 16px;
 }
 
-button:hover {
-    background-color: #0056b3;
+}
+
+.image-item:hover .image-title {
+    opacity: 1;
 }
