--- a/tvshows.css
+++ b/tvshows.css
@@ -86,9 +86,11 @@ ul li a:hover {
 }
 
 .image-item img {
-    max-width: 100%;
+    max-width: 150px; /* Set the maximum width */
+    max-height: 150px; /* Set the maximum height */
     transition: transform 0.3s;
 }
+
 
 .image-title {
     position: absolute;
