--- a/tvshows.css
+++ b/tvshows.css
@@ -205,20 +205,14 @@ h2 {
   gap: 3rem;
 }
 
-article {
+.movies img {
   width: 100%;
   height: auto;
-  cursor: pointer;
-}
-
-article img {
-  width: 100%;
-  height: 100%;
   object-fit: cover;
   transition: 0.2s all linear;
 }
 
-article img:hover {
+.movies img:hover {
   transform: translateY(-10px);
 }
 
