--- a/tvshows.css
+++ b/tvshows.css
@@ -6,6 +6,26 @@ body {
   color: white;
 }
 
+.video-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  z-index: -1; /* Ensure the video is behind all other content */
+}
+
+video#background-video {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transform: translate(-50%, -50%);
+}
+
 header {
   position: fixed;
   height: 60px;
